--- a/src/style.css
+++ b/src/style.css
@@ -1,31 +1,35 @@
+/* Add a custom font */
 h4 {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
+/* Center and style the to-do list section */
 section#to-do-list {
   width: 600px;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  align-items: center;
   background: white;
+  align-items: center;
   box-sizing: border-box;
-  box-shadow: 0 2px 8px 3px rgba(151, 151, 151, 0.42);
   margin: 0 auto;
+  box-shadow: 0 2px 8px 3px rgba(151, 151, 151, 0.42);
 }
 
+/* Style the header of the to-do list */
 .to-do-header {
   width: 100%;
   display: flex;
   height: 50px;
+  justify-content: space-between;
   box-sizing: border-box;
   border-bottom: 1px solid #cacaca;
-  justify-content: space-between;
-  align-items: center;
   padding: 0 20px;
+  align-items: center;
 }
 
-div#to-do-input-container {
+/* Container for to-do input */
+div#input-container {
   height: 50px;
   display: flex;
   position: relative;
@@ -33,81 +37,89 @@ div#to-do-input-container {
   align-items: center;
 }
 
-input#to-do-input {
-  height: 50px;
+/* Input field for to-do input */
+input#input-field {
   width: 100%;
-  border: none;
+  height: 50px;
+  border: none; /* Removes border from input field */
   box-sizing: border-box;
-  border-bottom: 1px solid #c3c3c3;
-  padding-left: 20px;
-  font-family: 'Roboto', sans-serif;
+  border-bottom: 1px solid #c3c3c3; /* Adds bottom border to input field */
   font-size: 16px;
+  padding-left: 19px;
+  font-family: "Roboto", sans-serif;
 }
 
-input#to-do-input:focus-visible {
+/* Adds focus-visible style for input field */
+input#input-field:focus-visible {
   outline: 0;
 }
 
-.to-do-icon {
+/* Icon for to-do input */
+.icon {
   width: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
   position: absolute;
-  right: 20px;
   cursor: move;
+  right: 20px;
 }
 
-.to-do-icon svg {
+/* SVG icon for to-do input */
+.icon svg {
+  color: #f8f6f6;
   height: 16px;
-  color: #d9d9d9;
   display: flex;
   align-self: flex-end;
 }
 
 #to-do-input-container svg {
   position: absolute;
-  right: 20px;
+  right: 19px;
 }
 
-ul#list {
+/* The unordered list with ID list */
+#list {
   list-style: none;
   margin: 0;
   padding: 0;
-  display: flex;
-  flex-direction: column;
+  display: flex; /* Display as flex container */
+  flex-direction: column; /* Arrange items vertically */
   width: 100%;
 }
 
-li.item-to-do {
-  height: 50px;
+/* The list item with class item-to-do */
+#list .item-to-do {
   width: 100%;
-  box-sizing: border-box;
-  border-bottom: 1px solid #c3c3c3;
+  height: 50px;
+  box-sizing: border-box; /* Box-sizing to include border */
+  border-bottom: 1px solid #c3c3c3; /* Bottom border with light gray color */
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  padding-left: 20px;
+  padding-left: 20px; /* Add left padding */
   font-family: "Roboto", sans-serif;
-  gap: 20px;
   position: relative;
+  gap: 20px;
 }
 
-.remove-btn {
+/* The remove button with class remove-btn */
+#list .remove-btn {
   height: 50px;
-  display: flex;
-  justify-content: center;
+  display: flex; /* Display as flex container */
+  justify-content: center; /* Center align items horizontally */
   text-align: left;
   align-items: center;
-  background: #efefef;
+  background: #f3f2f2;
   width: 100%;
-  cursor: pointer;
-  color: #6b6b6b;
-  font-family: 'Roboto', sans-serif;
+  color: #6e6d6d;
+  cursor: pointer; /* Add cursor pointer */
+  font-family: "Roboto", sans-serif; /* Use Roboto font */
 }
 
-.to-do-icon.remove {
-  display: none;
+/* The remove icon with class to-do-icon and ID remove */
+#list .to-do-icon.remove {
+  display: none; /* Initially hide the icon */
   right: 30px;
   cursor: pointer;
 }
@@ -126,7 +138,7 @@ input.input-to-do:focus-visible {
 
 li.item-to-do.edit,
 .edit .input-to-do {
-  background: #f5ebb3;
+  background: #f8eeb4;
 }
 
 .edit .to-do-icon.remove {
@@ -148,5 +160,5 @@ li.item-to-do.edit,
 
 .remove-btn.disabled {
   cursor: not-allowed;
-  background: #c9c9c9;
+  background: #cecdcd;
 }
